<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tzadmin.tzsk_windows.DeliveriesActivity">

    <item
        android:id="@+id/btn_meas_geo"
        android:title="@string/btn_meas_geo"
        android:icon="@android:drawable/ic_menu_mapmode"
        app:showAsAction="always" />

    <item
        android:id="@+id/btn_meas_call"
        android:title="@string/btn_meas_call"
        android:icon="@android:drawable/ic_menu_call"
        app:showAsAction="always" />

    <item
        android:id="@+id/btn_meas_camera"
        android:title="@string/btn_meas_camera"
        android:icon="@android:drawable/ic_menu_camera"
        app:showAsAction="always" />

    <item
        android:id="@+id/btn_meas_ok"
        android:title="@string/btn_meas_send"
        android:icon="@android:drawable/ic_menu_send"
        app:showAsAction="always" />

    <item
        android:id="@+id/btn_meas_close"
        android:title="@string/btn_meas_close"
        app:showAsAction="collapseActionView" />

</menu>
